@@ -1,5 +1,6 @@
 package com.doug.projects.transitdelayservice.service;
 
+import com.doug.projects.transitdelayservice.entity.GraphOptions;
 import com.doug.projects.transitdelayservice.entity.LineGraphData;
 import com.doug.projects.transitdelayservice.entity.LineGraphDataResponse;
 import com.doug.projects.transitdelayservice.entity.dynamodb.RouteTimestamp;
@@ -21,7 +22,7 @@ import static com.doug.projects.transitdelayservice.util.LineGraphUtil.getColumn
 @Service
 @RequiredArgsConstructor
 @Slf4j
-public class DelayGraphingService {
+public class GetDelayService {
     private final RouteTimestampRepository repository;
     private final RouteMapperService routeMapperService;
     private final LineGraphUtil lineGraphUtil;
@@ -31,20 +32,14 @@ public class DelayGraphingService {
      * Gets the average delay of <code>routes</code> between <code>startTime</code> and <code>endTime</code>, returning
      * a list of size <code>units</code>. Returns <code>LineGraphResponse</code>, to be used with Chart.JS formatting.
      *
-     * @param startTime the time to begin search by, in unix epoch seconds
-     * @param endTime   the time to end search by, in unix epoch seconds
-     * @param units     how 'wide' the graph will be
-     * @param routes    the routes to search by. NOTE: if null is supplied, all routes will be searched.
+     * @param graphOptions the options used to create a graph
      * @return graph a Chart.js LineGraph data object, <code>units</code>. Note that labels will eithe be the date (if
      * the distance measured by each unit is a day or longer), or date & time (if the distance measured by each unit is
      * less than a day). Delay over the period is averaged to the thousandths decimal place.
      * @throws IllegalArgumentException if startTime is >= endTime
      */
-    public LineGraphDataResponse getAverageDelay(Long startTime, Long endTime, Integer units, List<String> routes) throws IllegalArgumentException {
-        log.info("Getting {} units of delays between {} and {} for routes {}", units, startTime, endTime, routes);
-        //validations, if not set default
-        return genericLineGraphConverter(startTime, endTime, units, routes,
-                RouteTimestampUtil::getAverageDelayDataForRouteInMinutes);
+    public LineGraphDataResponse getAverageDelay(GraphOptions graphOptions) throws IllegalArgumentException {
+        return genericLineGraphConverter(graphOptions, RouteTimestampUtil::getAverageDelayDataForRouteInMinutes);
     }
 
 
@@ -52,82 +47,72 @@ public class DelayGraphingService {
      * Gets the MAX delay of <code>routes</code> between <code>startTime</code> and <code>endTime</code>, returning a
      * list of <code>LineGraphData</code> of size <code>units</code>.
      *
-     * @param startTime the time to begin search by, in unix epoch seconds
-     * @param endTime   the time to end search by, in unix epoch seconds
-     * @param units     how 'wide' the graph will be
-     * @param routes    the routes to search by. NOTE: if null is supplied, all routes will be searched.
+     * @param graphOptions the options used to create a graph
      * @return graph a Chart.js LineGraph data object, <code>units</code>. Note that labels will eithe be the date (if
      * the distance measured by each unit is a day or longer), or date & time (if the distance measured by each unit is
      * less than a day). Delay over the period is averaged to the thousandths decimal place.
      * @throws IllegalArgumentException if startTime is >= endTime
      */
-    public LineGraphDataResponse getMaxDelayFor(Long startTime, Long endTime, Integer units, List<String> routes) throws IllegalArgumentException {
+    public LineGraphDataResponse getMaxDelayFor(GraphOptions graphOptions) throws IllegalArgumentException {
         //validations, if not set default
-        return genericLineGraphConverter(startTime, endTime, units, routes,
-                RouteTimestampUtil::getMaxDelayForRouteInMinutes);
+        return genericLineGraphConverter(graphOptions, RouteTimestampUtil::getMaxDelayForRouteInMinutes);
+    }
+
+    public LineGraphDataResponse getPercentOnTimeFor(GraphOptions graphOptions, Integer lower, Integer upper) {
+        return genericLineGraphConverter(graphOptions, ((routeTimestampList) -> RouteTimestampUtil.percentOnTime(routeTimestampList, lower, upper)));
     }
 
     /**
      * Generic wrapper function that iterates over a collection of routeTimeStamps gathered from the DB.
      *
-     * @param startTime the startTime to search the db for, in unix time. If null, use midnight 6 days ago
-     * @param endTime   the endTime to search the db for, in unix time. If null, use midnight tonight.
-     * @param units     the number of columns in the graph. If null, use 7
-     * @param routes    the routes to search for in the db. If null, use getAllFriendlyNames
-     * @param converter the function run for after gathering all of the routeTimestamps.
+     * @param graphOptions the options used to create a graph
+     * @param converter the function run for after gathering all routeTimestamps.
      * @return a graph, beginning at startTime, ending at endTime, over the number of units
      */
-    public LineGraphDataResponse genericLineGraphConverter(Long startTime, Long endTime, Integer units,
-                                                           List<String> routes, RouteTimestampConverter converter) {
-        final Long finalStartTime = startTime == null ? TransitDateUtil.getMidnightSixDaysAgo() : startTime;
-        final Long finalEndTime = endTime == null ? TransitDateUtil.getMidnightTonight() : endTime;
-        final Integer finalUnits = units == null ? 7 : units;
-        final List<String> finalRoutes =
-                CollectionUtils.isEmpty(routes) ? routeMapperService.getAllFriendlyNames() : routes;
-
+    private LineGraphDataResponse genericLineGraphConverter(GraphOptions graphOptions, RouteTimestampConverter converter) {
+        final long finalStartTime = graphOptions.getStartTime() == null ? TransitDateUtil.getMidnightSixDaysAgo() : graphOptions.getStartTime();
+        final long finalEndTime = graphOptions.getEndTime() == null ? TransitDateUtil.getMidnightTonight() : graphOptions.getEndTime();
+        final int finalUnits = graphOptions.getUnits() == null ? 7 : graphOptions.getUnits();
+        final List<String> finalRoutes = CollectionUtils.isEmpty(graphOptions.getRoutes()) ? routeMapperService.getAllFriendlyNames() : graphOptions.getRoutes();
+        final boolean finalUseColor = graphOptions.getUseColor() == null || graphOptions.getUseColor(); //default to false unless specified
         if (finalStartTime >= finalEndTime)
             throw new IllegalArgumentException("startTime must be greater than endTime");
 
-        LineGraphDataResponse response = new LineGraphDataResponse();
 
-        response.setLabels(getColumnLabels(finalStartTime, finalEndTime, finalUnits));
         var routeTimestampsMap = repository.getRouteTimestampsMapBy(finalStartTime, finalEndTime, finalRoutes);
-        List<LineGraphData> lineGraphDataList = routeTimestampsMap.entrySet()
-                .parallelStream()
-                .map(routeFriendlyName -> {
-                    List<RouteTimestamp> timestampsForRoute = routeFriendlyName.getValue();
-                    if (timestampsForRoute == null) {
-                        timestampsForRoute = Collections.emptyList();
-                    }
-                    List<Double> currData = new ArrayList<>(finalUnits);
-                    try {
-                        double perUnitSecondLength = (double) (finalEndTime - finalStartTime) / finalUnits;
-                        int lastIndexUsed = 0;
-                        for (int currUnit = 0; currUnit < finalUnits; currUnit++) {
-                            final long finalCurrEndTime =
-                                    (long) (finalStartTime + (perUnitSecondLength * (currUnit + 1)));
-                            int currLastIndex = timestampsForRoute.size();
-                            for (int i = lastIndexUsed; i < timestampsForRoute.size(); i++) {
-                                if (timestampsForRoute.get(i)
-                                        .getTimestamp() >= finalCurrEndTime) {
-                                    currLastIndex = i;
-                                    break;
-                                }
-                            }
-                            Double converterResult =
-                                    converter.convert(timestampsForRoute.subList(lastIndexUsed, currLastIndex));
-                            currData.add(converterResult);
-                            //get ready for next iteration
-                            lastIndexUsed = currLastIndex;
+        List<LineGraphData> lineGraphDataList = routeTimestampsMap.entrySet().parallelStream().map(routeFriendlyName -> {
+            List<RouteTimestamp> timestampsForRoute = routeFriendlyName.getValue();
+            if (timestampsForRoute == null) {
+                timestampsForRoute = Collections.emptyList();
+            }
+            List<Double> currData = new ArrayList<>(finalUnits * 2);
+            try {
+                double perUnitSecondLength = (double) (finalEndTime - finalStartTime) / finalUnits;
+                int lastIndexUsed = 0;
+                for (int currUnit = 0; currUnit < finalUnits; currUnit++) {
+                    final long finalCurrEndTime = (long) (finalStartTime + (perUnitSecondLength * (currUnit + 1)));
+                    int currLastIndex = timestampsForRoute.size();
+                    for (int i = lastIndexUsed; i < timestampsForRoute.size(); i++) {
+                        if (timestampsForRoute.get(i).getTimestamp() >= finalCurrEndTime) {
+                            currLastIndex = i;
+                            break;
                         }
-                    } catch (Exception e) {
-                        log.error("Failed to create for friendlyName: {}", routeFriendlyName, e);
                     }
-                    return lineGraphUtil.getLineGraphData(routeFriendlyName.getKey(), currData);
-                })
-                .toList();
+                    Double converterResult = converter.convert(timestampsForRoute.subList(lastIndexUsed, currLastIndex));
+                    currData.add(converterResult);
+                    //get ready for next iteration
+                    lastIndexUsed = currLastIndex;
+                }
+            } catch (Exception e) {
+                log.error("Failed to create for friendlyName: {}", routeFriendlyName, e);
+            }
+            return lineGraphUtil.getLineGraphData(routeFriendlyName.getKey(), currData, finalUseColor);
+        }).collect(Collectors.toList());
         lineGraphUtil.sortByGTFSSortOrder(lineGraphDataList);
+
+        LineGraphDataResponse response = new LineGraphDataResponse();
         response.setDatasets(lineGraphDataList);
+        response.setLabels(getColumnLabels(finalStartTime, finalEndTime, finalUnits));
         return response;
     }
 }
